# tauri-youtube-mp3

./: .pnpmfile.cjs  INSTALLATION.md  README.md  SETUP.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: rule.md
src/: App.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  conversion.rs  deps.rs  download.rs  main.rs
src/components/ErrorDisplay/: ErrorDisplay.scss  ErrorDisplay.tsx
src/components/FileImport/: FileImport.scss  FileImport.tsx
src/components/History/: History.scss  History.tsx
src/components/Progress/: Progress.scss  Progress.tsx
src/components/UrlInput/: UrlInput.scss  UrlInput.tsx
src/store/: index.ts
src/store/download/: actions.ts  index.ts  selectors.ts  types.ts
src/styles/: base.scss  main.scss  variables.scss
