[package]
name = "youtube-downloader"
version = "0.1.0"
description = "A Tauri App for downloading YouTube videos and converting to MP3"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "fs-rename-file", "fs-create-dir", "fs-read-file", "macos-private-api", "fs-read-dir", "fs-exists", "fs-copy-file", "fs-write-file", "fs-remove-file", "fs-remove-dir", "shell-open", "path-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
anyhow = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

